--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,10 +1,3 @@
-/* Custom Stylesheet */
-/**
- *
- * Made By Joash Pereira
- * Thanks for MaterializeCSS.com
- */
-
 .default_color{background-color: #2196F3 !important}
 
 .default_color_text{color: #2196F3 !important}
@@ -229,32 +222,6 @@ nav a.button-collapse {
     left: -25px;
 }
 
-.card-avatar .waves-effect {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.card-avatar img {
-    height: 150px;
-    width: 150px;
-    border-radius: 75px;
-}
-
-.card-avatar .card-content {
-    text-align: center;
-}
-
-.card .card-content p {
-    margin: 15px 0px;
-}
-
-.card-avatar .card-content i {
-   font-size: 1.5rem;
-}
-
-.card-avatar .card-content .card-title {
-    line-height: 30px !important;
-}
 
 .parallax-container {
     max-height: 400px;
@@ -262,4 +229,13 @@ nav a.button-collapse {
 
 footer.page-footer {
     margin-top: 0px !important;
+}
+
+
+div.col.l6.s12 {
+    width: 100%;
+}
+
+.red.darken-1 {
+    box-shadow: 12px 15px 20px rgba(0, 0, 0, 0.1);
 }
